--- a/firebase_demo/pubspec.yaml
+++ b/firebase_demo/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.14.1
   cloud_firestore: ^3.1.12
+  fluttertoast: ^8.0.9
+  firebase_auth: ^3.3.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
