--- a/firebase_demo/pubspec.yaml
+++ b/firebase_demo/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.1.12
   fluttertoast: ^8.0.9
   firebase_auth: ^3.3.15
+  image_picker: ^0.8.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
